Fix a bug in the V8 JNI bindings when creating JNI method signatures

This was introduced by the latest merge to WebKit r82507. WebKit now
uses a new JavaTypeString, distinct from JavaTypeObject, for
representing strings in the JNI bridge. We need to account for this
when building the JNI method signature.

See https://bugs.webkit.org/show_bug.cgi?id=62389 for details.

Bug: 4585284
Change-Id: I6a54679b954c32bf03d715da3c958c61baa5fecc