Source/WebCore/bridge/jni/JavaMethodJobject.cpp
@@ -130,7 +130,13 @@ const char* JavaMethodJobject::signature() const
                 appendClassName(signatureBuilder, javaClassName.data());
             else {
                 signatureBuilder.append(signatureFromJavaType(type));
+#if PLATFORM(ANDROID)
+                // FIXME: Upstream to WebKit
+                // https://bugs.webkit.org/show_bug.cgi?id=62389
+                if (type == JavaTypeObject || type == JavaTypeString) {
+#else
                 if (type == JavaTypeObject) {
+#endif
                     appendClassName(signatureBuilder, javaClassName.data());
                     signatureBuilder.append(';');
                 }
@@ -143,7 +149,13 @@ const char* JavaMethodJobject::signature() const
             appendClassName(signatureBuilder, returnType);
         else {
             signatureBuilder.append(signatureFromJavaType(m_returnType));
+#if PLATFORM(ANDROID)
+            // FIXME: Upstream to WebKit
+            // https://bugs.webkit.org/show_bug.cgi?id=62389
+            if (m_returnType == JavaTypeObject || m_returnType == JavaTypeString) {
+#else
             if (m_returnType == JavaTypeObject) {
+#endif
                 appendClassName(signatureBuilder, returnType);
                 signatureBuilder.append(';');
             }
